# discord-cxx

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/discord-cxx/: callback.h  client.h  client_events.h  client_options.h  event.h  event_id.h  event_kind.h  event_router.h  events.h  message.h  user.h  user_info.h
include/discord-cxx/api/: attachment.h  channel.h  channel_mention.h  embed.h  emoji.h  guild_feature.h  guild_member.h  message.h  nitro_kind.h  permission_overwrite.h  reaction.h  role.h  snowflake.h  timestamp.h  unavailable_guild.h  user_flag.h  user_info.h
include/discord-cxx/gateway/: gateway_util.h
src/: client.cpp  event_router.cpp  events.cpp  user_info.cpp
